refactor: 펀딩 및 노선 Clock 적용 및 예외처리 추가 (#133)
* refactor: validator 유틸리티 클래스로 변경

* refactor: 빈 리스트 emptyList를 사용해 반환

* refactor: ë누락된 예외처리 추가

* refactor: 출발시간 및 금액계산 예외처리 보완