@@ -14,6 +14,7 @@ import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDate;
 import java.time.LocalDateTime;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.stream.Collectors;
@@ -109,7 +110,7 @@ public class FundingTimelineProcessor {
             Funding funding = pathinfo.getFunding();
 
             boolean allCompleted = pathinfosByFundingId
-                    .getOrDefault(funding.getFundingId(), List.of())
+                    .getOrDefault(funding.getFundingId(), Collections.emptyList())
                     .stream()
                     .allMatch(path -> path.getStatus() == PathinfoStatus.COMPLETED);
 
